# FileBrowser

./: CMakeLists.txt  README.md  log.txt  main.c  valgrind.xlm
include/: config.c  config.h  input.c  input.h
include/backend/: directory_func.c  directory_func.h  error_handling.c  error_handling.h  statusbar_func.c  statusbar_func.h  structs.h  window_func.c  window_func.h
include/display/: draw_attributes.c  draw_attributes.h
old/: main.c
